# mcp_servers

./: .gitignore  README.md  docker-compose.yml  env.template  inspect_tools.py  list_all_tools.py  setup.sh  sync_tools.py
ghostlabs-phantom-mcp/: Dockerfile  pyproject.toml  server.py
ghostlabs-shroud-mcp/: Dockerfile  pyproject.toml  server.py
ghostlabs-skills-mcp/: Dockerfile  pyproject.toml  server.py
ghostlabs-specter-mcp/: Dockerfile  pyproject.toml  server.py
ghostlabs-whisper-mcp/: Dockerfile  pyproject.toml  server.py
