[project]
name = "ghostlabs-phantom-mcp"
version = "1.0.0"
description = "GhostLabs Phantom Lead Generation MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.2",
    "mcp[cli]>=1.6",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
